# McMinecraft

./: .travis.yml  README.md
ci/: compile-server-and-client.sh
client/scripts/: generate.sh
client/src/minecraft/: ObservableWorld.ts
client/src/net/: MinecraftServer.ts
cpp-server/: CMakeLists.txt
cpp-server/cmake/: ClangTidy.cmake  ThirdParty.cmake
cpp-server/src/mcs/: main.cpp  minecraft_server.cpp  minecraft_server.hpp  minecraft_world.cpp  minecraft_world.hpp
protos/minecraft/: requests.proto  updates.proto  world.proto
ts-client/: envoy.yaml  package.json
ts-client/src/minecraft/: Blocks.ts  MinecraftWorld.ts  ObservableWorld.ts  Observer.ts
ts-client/src/net/: MinecraftServer.ts
ts-client/src/views/: Home.vue
